@@ -1,3 +1,8 @@
 # ChangeLog file for clients
 # This file is updated with Maddlog
 
+* Thu Aug 18 2011 Fabian Groffen <fabian@cwi.nl>
+- The time format of the timer output can now be controlled with an
+  optional argument to the -i option.  ms, s and m force the time to be
+  formatted as milliseconds, seconds or minutes + seconds respectively.
+
